Services/Media/Sonarr/sonarr.service.yml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: media
  labels:
    app.kubernetes.io/name: sonarr
  annotations:
spec:
  ports:
    - name: http
      port: 8989
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: sonarr
