Services/Media/Sonarr/sonarr.ingress-traefik.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr-ingress
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`sonarr.local.flyvmed.dk`) && PathPrefix(`/`)
    kind: Rule
    services:
    - kind: Service
      name: sonarr
      namespace: media
      port: 8989
  tls:
    certResolver: letsencrypt
